[package]
name = "xiaomi-sensor-exporter"
version = "1.0.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluez = "^0.3"
bytes = "^1.0"
clap = "3.0.0-beta.5"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1.8", features = ["full"] }
